
set(CORE_FILES
${PROJECT_SOURCE_DIR}/core/convergence/BurninEstimatorContinuous.cpp
${PROJECT_SOURCE_DIR}/core/convergence/BurninEstimatorContinuous.h
${PROJECT_SOURCE_DIR}/core/convergence/ConvergenceDiagnosticContinuous.cpp
${PROJECT_SOURCE_DIR}/core/convergence/ConvergenceDiagnosticContinuous.h
${PROJECT_SOURCE_DIR}/core/convergence/EssMax.cpp
${PROJECT_SOURCE_DIR}/core/convergence/EssMax.h
${PROJECT_SOURCE_DIR}/core/convergence/GelmanRubinTest.cpp
${PROJECT_SOURCE_DIR}/core/convergence/GelmanRubinTest.h
${PROJECT_SOURCE_DIR}/core/convergence/GewekeTest.cpp
${PROJECT_SOURCE_DIR}/core/convergence/GewekeTest.h
${PROJECT_SOURCE_DIR}/core/convergence/HeidelbergerWelchTest.cpp
${PROJECT_SOURCE_DIR}/core/convergence/HeidelbergerWelchTest.h
${PROJECT_SOURCE_DIR}/core/convergence/RafteryLewisTest.cpp
${PROJECT_SOURCE_DIR}/core/convergence/RafteryLewisTest.h
${PROJECT_SOURCE_DIR}/core/convergence/SemMin.cpp
${PROJECT_SOURCE_DIR}/core/convergence/SemMin.h
${PROJECT_SOURCE_DIR}/core/convergence/StationarityTest.cpp
${PROJECT_SOURCE_DIR}/core/convergence/StationarityTest.h
${PROJECT_SOURCE_DIR}/core/convergence/TraceAnalysisContinuous.cpp
${PROJECT_SOURCE_DIR}/core/convergence/TraceAnalysisContinuous.h
${PROJECT_SOURCE_DIR}/core/dag/ConstantNode.cpp
${PROJECT_SOURCE_DIR}/core/dag/ConstantNode.h
${PROJECT_SOURCE_DIR}/core/dag/DAGNode.cpp
${PROJECT_SOURCE_DIR}/core/dag/DAGNode.h
${PROJECT_SOURCE_DIR}/core/dag/DeterministicNode.cpp
${PROJECT_SOURCE_DIR}/core/dag/DeterministicNode.h
${PROJECT_SOURCE_DIR}/core/dag/StochasticNode.cpp
${PROJECT_SOURCE_DIR}/core/dag/StochasticNode.h
${PROJECT_SOURCE_DIR}/core/dag/VariableNode.cpp
${PROJECT_SOURCE_DIR}/core/dag/VariableNode.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Container.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Container.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/ContainerIterator.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/ContainerIterator.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/DagNodeContainer.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/DagNodeContainer.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Matrix/Matrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Matrix/Matrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Matrix/MatrixComplex.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Matrix/MatrixComplex.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Matrix/MatrixReal.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Matrix/MatrixReal.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/MonitorsContainer.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/MonitorsContainer.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/MovesContainer.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/MovesContainer.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/Vector.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/Vector.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorBoolean.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorBoolean.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorAminoAcidStates.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorAminoAcidStates.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorCharacterContinuous.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorCharacterContinuous.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorCharacters.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorCharacters.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorDnaStates.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorDnaStates.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorRnaStates.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorRnaStates.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorStandardStates.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorCharData/VectorStandardStates.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorComplex.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorComplex.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorInteger.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorInteger.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorNatural.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorNatural.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorReal.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorReal.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorRealPos.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorRealPos.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorString.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/container/Vector/VectorString.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/ConstantMemberObject.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/ConstantMemberObject.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/MemberObject.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/MemberObject.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/MutableMemberObject.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/MutableMemberObject.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/Simplex.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/Simplex.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/Trace.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/memberobject/Trace.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/tree/Topology.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/tree/Topology.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/tree/TopologyNode.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/tree/TopologyNode.h
${PROJECT_SOURCE_DIR}/core/datatypes/complex/tree/TreePlate.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/complex/tree/TreePlate.h
${PROJECT_SOURCE_DIR}/core/datatypes/model/Model.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/model/Model.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/CharacterMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/CharacterMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/AminoAcidState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/AminoAcidState.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/Character.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/Character.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/CharacterContinuous.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/CharacterContinuous.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/CharacterStateDiscrete.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/CharacterStateDiscrete.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/DnaState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/DnaState.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/NucleotideState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/NucleotideState.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/RnaState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/RnaState.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/StandardState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/characters/StandardState.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/RateMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/RateMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/TransitionProbabilityMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/TransitionProbabilityMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/RbBoolean.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/RbBoolean.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Categorical.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Categorical.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/CharacterState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/CharacterState.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Complex.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Complex.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Integer.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Integer.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Natural.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Natural.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Probability.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Probability.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/RbString.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/RbString.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Real.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/Real.h
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/RealPos.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/primitive/RealPos.h
${PROJECT_SOURCE_DIR}/core/datatypes/RbAbstract.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/RbAbstract.h
${PROJECT_SOURCE_DIR}/core/datatypes/RbInternal.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/RbInternal.h
${PROJECT_SOURCE_DIR}/core/datatypes/RbLanguageObject.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/RbLanguageObject.h
${PROJECT_SOURCE_DIR}/core/datatypes/RbObject.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/RbObject.h
${PROJECT_SOURCE_DIR}/core/distributions/Distribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/Distribution.h
${PROJECT_SOURCE_DIR}/core/distributions/DistributionContinuous.cpp
${PROJECT_SOURCE_DIR}/core/distributions/DistributionContinuous.h
${PROJECT_SOURCE_DIR}/core/distributions/DistributionDiscrete.cpp
${PROJECT_SOURCE_DIR}/core/distributions/DistributionDiscrete.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_birthdeath.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_birthdeath.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_neutralcoalescent.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_neutralcoalescent.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_ctmm.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_ctmm.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_topologyunif.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/Dist_topologyunif.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_beta.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_beta.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_cat.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_cat.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_dirichlet.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_dirichlet.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_exp.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_exp.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_gamma.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_gamma.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_logis.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_logis.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_multinomial.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_multinomial.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_norm.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_norm.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_lnorm.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_lnorm.h
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_unif.cpp
${PROJECT_SOURCE_DIR}/core/distributions/statistics/Dist_unif.h
${PROJECT_SOURCE_DIR}/core/functions/Argument.cpp
${PROJECT_SOURCE_DIR}/core/functions/Argument.h
${PROJECT_SOURCE_DIR}/core/functions/ArgumentRule.cpp
${PROJECT_SOURCE_DIR}/core/functions/ArgumentRule.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__add.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__and.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__div.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__eq.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__ge.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__gt.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__le.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__lt.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__mul.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__ne.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__or.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__range.cpp
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__range.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__sub.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__uminus.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__unot.h
${PROJECT_SOURCE_DIR}/core/functions/basic/Func__uplus.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_clamp.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_clamp.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_clear.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_clear.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_dppConFromExpNumClusters.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_dppConFromExpNumClusters.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_ls.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_ls.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_normalizeVector.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_normalizeVector.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_quit.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_quit.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_setval.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_setval.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_simplex.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_structure.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_structure.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_unclamp.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_unclamp.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_unique.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_unique.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/Func_vector.h
${PROJECT_SOURCE_DIR}/core/functions/ConstructorFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/ConstructorFunction.h
${PROJECT_SOURCE_DIR}/core/functions/DistributionFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/DistributionFunction.h
${PROJECT_SOURCE_DIR}/core/functions/Ellipsis.cpp
${PROJECT_SOURCE_DIR}/core/functions/Ellipsis.h
${PROJECT_SOURCE_DIR}/core/functions/io/Func_readAlignment.cpp
${PROJECT_SOURCE_DIR}/core/functions/io/Func_readAlignment.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_abs.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_abs.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_cos.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_cos.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_exp.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_exp.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_ln.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_ln.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_log.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_log.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_power.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_power.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_sin.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_sin.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_sqrt.cpp
${PROJECT_SOURCE_DIR}/core/functions/math/Func_sqrt.h
${PROJECT_SOURCE_DIR}/core/functions/math/Func_transpose.h
${PROJECT_SOURCE_DIR}/core/functions/MemberFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/MemberFunction.h
${PROJECT_SOURCE_DIR}/core/functions/OptionRule.cpp
${PROJECT_SOURCE_DIR}/core/functions/OptionRule.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/Func_gtr.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/Func_gtr.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/Func_tiprobs.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/Func_tiprobs.h
${PROJECT_SOURCE_DIR}/core/functions/RangeRule.h
${PROJECT_SOURCE_DIR}/core/functions/RbFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/RbFunction.h
${PROJECT_SOURCE_DIR}/core/functions/ValueRule.cpp
${PROJECT_SOURCE_DIR}/core/functions/ValueRule.h
${PROJECT_SOURCE_DIR}/core/help/Help.cpp
${PROJECT_SOURCE_DIR}/core/help/Help.h
${PROJECT_SOURCE_DIR}/core/help/HelpNode.cpp
${PROJECT_SOURCE_DIR}/core/help/HelpNode.h
${PROJECT_SOURCE_DIR}/core/inference/mcmc/Mcmc.cpp
${PROJECT_SOURCE_DIR}/core/inference/mcmc/Mcmc.h
${PROJECT_SOURCE_DIR}/core/inference/mcmc/Monitor.cpp
${PROJECT_SOURCE_DIR}/core/inference/mcmc/Monitor.h
${PROJECT_SOURCE_DIR}/core/io/NclReader.cpp
${PROJECT_SOURCE_DIR}/core/io/NclReader.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBeta.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBeta.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBinomial.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBinomial.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionCauchy.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionCauchy.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionChisq.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionChisq.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionDirichlet.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionDirichlet.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionExponential.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionExponential.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionF.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionF.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGamma.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGamma.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGeometric.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGeometric.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLogistic.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLogistic.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionMultinomial.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionMultinomial.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionNormal.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionNormal.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLognormal.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLognormal.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionPoisson.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionPoisson.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionUniform.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionUniform.h
${PROJECT_SOURCE_DIR}/core/math/EigenSystem.cpp
${PROJECT_SOURCE_DIR}/core/math/EigenSystem.h
${PROJECT_SOURCE_DIR}/core/math/RandomNumberFactory.cpp
${PROJECT_SOURCE_DIR}/core/math/RandomNumberFactory.h
${PROJECT_SOURCE_DIR}/core/math/RandomNumberGenerator.cpp
${PROJECT_SOURCE_DIR}/core/math/RandomNumberGenerator.h
${PROJECT_SOURCE_DIR}/core/math/RbMathCombinatorialFunctions.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathCombinatorialFunctions.h
${PROJECT_SOURCE_DIR}/core/math/RbMathFunctions.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathFunctions.h
${PROJECT_SOURCE_DIR}/core/math/RbMathGaussianElimination.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathGaussianElimination.h
${PROJECT_SOURCE_DIR}/core/math/RbMathLogic.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathLogic.h
${PROJECT_SOURCE_DIR}/core/math/RbMathMatrix.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathMatrix.h
${PROJECT_SOURCE_DIR}/core/math/RbMathVector.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathVector.h
${PROJECT_SOURCE_DIR}/core/math/RbStatisticsHelper.cpp
${PROJECT_SOURCE_DIR}/core/math/RbStatisticsHelper.h
${PROJECT_SOURCE_DIR}/core/moves/Move.cpp
${PROJECT_SOURCE_DIR}/core/moves/Move.h
${PROJECT_SOURCE_DIR}/core/moves/MoveSchedule.cpp
${PROJECT_SOURCE_DIR}/core/moves/MoveSchedule.h
${PROJECT_SOURCE_DIR}/core/moves/MoveSimple.cpp
${PROJECT_SOURCE_DIR}/core/moves/MoveSimple.h
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_mmultinomial.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_mmultinomial.h
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_mscale.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_mscale.h
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_msimplex.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_msimplex.h
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_mslide.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/Move_mslide.h
${PROJECT_SOURCE_DIR}/core/moves/tree/Move_mlocal.cpp
${PROJECT_SOURCE_DIR}/core/moves/tree/Move_mlocal.h
${PROJECT_SOURCE_DIR}/core/moves/tree/MoveTree.cpp
${PROJECT_SOURCE_DIR}/core/moves/tree/MoveTree.h
${PROJECT_SOURCE_DIR}/core/ncl/ncl.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsallocatematrix.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsassumptionsblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsassumptionsblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxscdiscretematrix.h
${PROJECT_SOURCE_DIR}/core/ncl/nxscharactersblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxscharactersblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxscxxdiscretematrix.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxscxxdiscretematrix.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdatablock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsdatablock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdefs.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdiscretedatum.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdistancedatum.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdistancesblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsdistancesblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsexception.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsexception.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsmultiformat.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsmultiformat.h
${PROJECT_SOURCE_DIR}/core/ncl/nxspublicblocks.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxspublicblocks.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsreader.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsreader.h
${PROJECT_SOURCE_DIR}/core/ncl/nxssetreader.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxssetreader.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsstring.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsstring.h
${PROJECT_SOURCE_DIR}/core/ncl/nxstaxablock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxstaxablock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxstoken.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxstoken.h
${PROJECT_SOURCE_DIR}/core/ncl/nxstreesblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxstreesblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsunalignedblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsunalignedblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsutilcopy.h
${PROJECT_SOURCE_DIR}/core/ui/UserInterface.cpp
${PROJECT_SOURCE_DIR}/core/ui/UserInterface.h
${PROJECT_SOURCE_DIR}/core/utils/RbConstants.h
${PROJECT_SOURCE_DIR}/core/utils/RbException.cpp
${PROJECT_SOURCE_DIR}/core/utils/RbException.h
${PROJECT_SOURCE_DIR}/core/utils/RbFileManager.cpp
${PROJECT_SOURCE_DIR}/core/utils/RbFileManager.h
${PROJECT_SOURCE_DIR}/core/utils/RbUtil.h
${PROJECT_SOURCE_DIR}/core/utils/RbOptions.h
${PROJECT_SOURCE_DIR}/core/utils/RbSettings.cpp
${PROJECT_SOURCE_DIR}/core/utils/RbSettings.h
${PROJECT_SOURCE_DIR}/core/utils/StringUtilities.cpp
${PROJECT_SOURCE_DIR}/core/utils/StringUtilities.h
${PROJECT_SOURCE_DIR}/core/workspace/Environment.cpp
${PROJECT_SOURCE_DIR}/core/workspace/Environment.h
${PROJECT_SOURCE_DIR}/core/workspace/FunctionTable.cpp
${PROJECT_SOURCE_DIR}/core/workspace/FunctionTable.h
${PROJECT_SOURCE_DIR}/core/workspace/MemberEnvironment.cpp
${PROJECT_SOURCE_DIR}/core/workspace/MemberEnvironment.h
${PROJECT_SOURCE_DIR}/core/workspace/MethodTable.cpp
${PROJECT_SOURCE_DIR}/core/workspace/MethodTable.h
${PROJECT_SOURCE_DIR}/core/workspace/RbRegister.cpp
${PROJECT_SOURCE_DIR}/core/workspace/Signals.cpp
${PROJECT_SOURCE_DIR}/core/workspace/Signals.h
${PROJECT_SOURCE_DIR}/core/workspace/TypeSpec.cpp
${PROJECT_SOURCE_DIR}/core/workspace/TypeSpec.h
${PROJECT_SOURCE_DIR}/core/workspace/Variable.cpp
${PROJECT_SOURCE_DIR}/core/workspace/Variable.h
${PROJECT_SOURCE_DIR}/core/workspace/VariableSlot.cpp
${PROJECT_SOURCE_DIR}/core/workspace/VariableSlot.h
${PROJECT_SOURCE_DIR}/core/workspace/Workspace.cpp
${PROJECT_SOURCE_DIR}/core/workspace/Workspace.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlDocument.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlDocument.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlElement.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlElement.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementAttributed.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementAttributed.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementInstance.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementInstance.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementReference.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementReference.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementTextNode.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlElementTextNode.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlParser.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlParser.h
${PROJECT_SOURCE_DIR}/core/Xml/XmlTag.cpp
${PROJECT_SOURCE_DIR}/core/Xml/XmlTag.h
)

add_library(rb-core ${CORE_FILES})
